--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
       <div class="container">
-        <a class="navbar-brand fw-bold" href="#">Hungarian365</a>
+        <a class="navbar-brand fw-bold" href="#">My Favourite Recipes</a>
         <!-- Toggler for mobile -->
         <button
           class="navbar-toggler"
@@ -38,7 +38,7 @@
         >
           <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./recipes.html">Recipes</a>
@@ -46,110 +46,19 @@
             <li class="nav-item">
               <a class="nav-link" href="./about.html">About</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./favorites.html">Favorites</a>
-            </li>
           </ul>
         </div>
       </div>
     </nav>
 
     <!-- Header -->
-    <header class="gradient-header text-center py-5 mb-4">
-      <div class="container">
-        <h1 class="fw-bold">Paprikás krumpli</h1>
-      </div>
-    </header>
 
     <!-- Main -->
-    <main class="container pb-5 mb-5">
-      <div class="row align-items-start mb-5 g-4">
-        <!-- image -->
-        <div class="col-12 col-md-6">
-          <div class="ratio ratio-1x1">
-            <img
-              src="./photos/paprikas krumpli2.jpg"
-              class="rounded object-fit-cover w-100 h-100"
-              alt="Paprikás-krumpli"
-            />
-          </div>
-        </div>
-
-        <!-- ingredients -->
-        <div class="col-12 col-md-6">
-          <section class="mb-4">
-            <h2 class="section-title ingredients">Hozzávalók:</h2>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">1 kg burgonya</li>
-              <li class="list-group-item">1 nagy fej vöröshagyma</li>
-              <li class="list-group-item">400 g chorizo</li>
-              <li class="list-group-item">3 ek olívaolaj</li>
-              <li class="list-group-item">1 ek só</li>
-              <li class="list-group-item">1 ek fűszerpaprika</li>
-              <li class="list-group-item">
-                1 teáskanál füstölt pirospaprika (kihagyható vagy helyette
-                nagyon pici chili)
-              </li>
-              <li class="list-group-item">1 ek sűrített paradicsom</li>
-              <li class="list-group-item">bors ízlés szerint</li>
-            </ul>
-          </section>
-        </div>
-      </div>
-
-      <!-- instructions -->
-      <section class="mb-4">
-        <h2 class="section-title instructions">Elkészítés:</h2>
-        <ol class="list-group list-group-numbered list-group-flush">
-          <li class="list-group-item">
-            A krumplit megpucolva, megmosva, tetszés szerinti formára vágjuk.
-          </li>
-          <li class="list-group-item">
-            A kolbászt kb. 2 cm-es darabokra vágjuk.
-          </li>
-          <li class="list-group-item">
-            A hagymát kis kockákra vágva az olajon megdinszteljük.
-          </li>
-          <li class="list-group-item">
-            Közben a kolbászt is rádobjuk, és kicsit sütjük.
-          </li>
-          <li class="list-group-item">
-            A krumplit is beletesszük, és jól átforgatjuk az olajon.
-          </li>
-          <li class="list-group-item">
-            Rátesszük a kétféle paprikát, a paradicsompürét, és annyi vízzel
-            engedjük fel, hogy egy kicsit több legyen, mint ahogy ellepi.
-          </li>
-          <li class="list-group-item">
-            Felforraljuk, és kis lángon puhára főzzük.
-          </li>
-        </ol>
-      </section>
-
-      <!-- source -->
-      <div class="mb-3">
-        <button
-          class="btn btn-link text-muted p-0"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#sourceCollapse"
-          aria-expanded="false"
-          aria-controls="sourceCollapse"
-        >
-          Forrás
-        </button>
-      </div>
-      <div class="collapse" id="sourceCollapse">
-        <small class="text-muted">
-          https://www.nosalty.hu/recept/chorizos-paprikas-krumpli-nokedlivel
-        </small>
-      </div>
-    </main>
 
     <!-- Footer -->
     <footer class="footer mt-5 py-3 bg-light fixed-bottom">
       <div class="container text-center">
-        <span class="text-muted">© 2025 Hungarian365</span>
+        <span class="text-muted">© 2025 My Favourite Recipes</span>
       </div>
     </footer>
 
