--- a/recipes/brownie.html
+++ b/recipes/brownie.html
@@ -82,9 +82,7 @@
             <h2 class="section-title ingredients">Hozzávalók:</h2>
             <ul class="list-group list-group-flush">
               <li class="list-group-item">185 g vaj</li>
-              <li class="list-group-item">
-                185 g étcsokoládé (min. 65%-os)/li>
-              </li>
+              <li class="list-group-item">185 g étcsokoládé (min. 65%-os)</li>
               <li class="list-group-item">3 db tojás</li>
               <li class="list-group-item">150 g cukor (kristály)</li>
               <li class="list-group-item">1 ek vaníliás cukor</li>
