--- a/about.html
+++ b/about.html
@@ -55,9 +55,53 @@
       </div>
     </nav>
 
-    <!-- Header -->
-
     <!-- Main -->
+    <main class="container my-5">
+      <div class="text-center mb-4">
+        <div class="icon-wrapper mb-3" aria-hidden="true">
+          <!-- Inline fried egg SVG -->
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="64"
+            height="64"
+            viewBox="0 0 16 16"
+            fill="currentColor"
+          >
+            <path
+              d="M8 0c1.657 0 3 1.343 3 3 0 .276-.224.5-.5.5S10 3.276 10 3a2 2 0 0 0-4 0c0 .276-.224.5-.5.5S5 3.276 5 3c0-1.657 1.343-3 3-3z"
+            />
+            <circle cx="8" cy="8" r="3" fill="#ffcc00" />
+            <path
+              d="M2 8c0-3.314 2.686-6 6-6s6 2.686 6 6-2.686 6-6 6-6-2.686-6-6z"
+              fill="none"
+              stroke="currentColor"
+            />
+          </svg>
+        </div>
+        <h1 class="fw-bold">Az oldalról</h1>
+      </div>
+
+      <div class="row justify-content-center">
+        <div class="col-lg-8">
+          <p class="lead">
+            A <strong>My Favourite Recipes</strong> oldal azért jött létre, mert
+            szerettem volna a kedvenc receptjeimet könnyen elérhetővé tenni. A
+            legegyszerűbb módja ennek pedig egy saját weboldal. Minden recept,
+            amit itt találsz többször kipróbált és - szerintem - nagyon finom.
+          </p>
+          <p>
+            15 éve élek külföldön, s nem tagadom, néha nagyon hiányzik a magyar
+            konyha. Az az igazság, hogy nem szeretek sok időt a konyhában
+            tölteni, ezért egyszerűen elkészíthető recepteket kerestem. Sokszor
+            improvizálnom kell, mert nem minden alapanyag található meg itt,
+            ezért néha nem a hagyományos módon készítem az ételeket, de a
+            lényeg, hogy így is finomak. Nem vagyok teljesen elégedett, ezért
+            lehet, hogy egyszer majd készítek egy jobb weboldalt a többi
+            recepttel is, de jelenleg ez megfelel nekem.
+          </p>
+        </div>
+      </div>
+    </main>
 
     <!-- Footer -->
     <footer class="footer mt-5 py-3 bg-light fixed-bottom">
