--- a/recipes.html
+++ b/recipes.html
@@ -58,9 +58,281 @@
     <!-- Header -->
 
     <!-- Main -->
+    <main>
+      <section class="recipes-list container my-5">
+        <h1 class="mb-4">Receptek:</h1>
+        <div class="row g-4">
+          <div class="col-12 col-md-6">
+            <a
+              href="./recipes/borsoleves.html"
+              class="recipe-card d-flex align-items-center text-decoration-none"
+            >
+              <img
+                src="./photos/borsoleves.jpg"
+                alt="Borsóleves"
+                class="recipe-thumb me-3"
+              />
+              <span class="recipe-name">Borsóleves</span>
+            </a>
+          </div>
+
+          <div class="col-12 col-md-6">
+            <a
+              href="./recipes/brassoi.html"
+              class="recipe-card d-flex align-items-center text-decoration-none"
+            >
+              <img
+                src="./photos/brassoi.jpg"
+                alt="Brassói aprópecsenye"
+                class="recipe-thumb me-3"
+              />
+              <span class="recipe-name">Brassói aprópecsenye</span>
+            </a>
+          </div>
+
+          <div class="col-12 col-md-6">
+            <a
+              href="./recipes/chili-con-carne.html"
+              class="recipe-card d-flex align-items-center text-decoration-none"
+            >
+              <img
+                src="./photos/chili-con-carne.jpg"
+                alt="Chili con carne"
+                class="recipe-thumb me-3"
+              />
+              <span class="recipe-name">Chili con carne</span>
+            </a>
+          </div>
+
+          <div class="col-12 col-md-6">
+            <a
+              href="./recipes/brownie.html"
+              class="recipe-card d-flex align-items-center text-decoration-none"
+            >
+              <img
+                src="./photos/dios-brownie2.jpg"
+                alt="Diós brownie"
+                class="recipe-thumb me-3"
+              />
+              <span class="recipe-name">Diós brownie</span>
+            </a>
+          </div>
+
+          <div class="col-12 col-md-6">
+            <a
+              href="./recipes/fahejas-csiga.html"
+              class="recipe-card d-flex align-items-center text-decoration-none"
+            >
+              <img
+                src="./photos/fahejas-csiga.jpg"
+                alt="Fahéjas csiga"
+                class="recipe-thumb me-3"
+              />
+              <span class="recipe-name">Fahéjas csiga</span>
+            </a>
+          </div>
+
+          <div class="col-12 col-md-6">
+            <a
+              href="./recipes/fasirt.html"
+              class="recipe-card d-flex align-items-center text-decoration-none"
+            >
+              <img
+                src="./photos/fasirt.jpg"
+                alt="Fasírt"
+                class="recipe-thumb me-3"
+              />
+              <span class="recipe-name">Fasírt</span>
+            </a>
+          </div>
+
+          <div class="col-12 col-md-6">
+            <a
+              href="./recipes/francia-hagymaleves.html"
+              class="recipe-card d-flex align-items-center text-decoration-none"
+            >
+              <img
+                src="./photos/hagymaleves3.jpg"
+                alt="Francia hagymaleves"
+                class="recipe-thumb me-3"
+              />
+              <span class="recipe-name">Francia hagymaleves</span>
+            </a>
+          </div>
+
+          <div class="col-12 col-md-6">
+            <a
+              href="./recipes/gombaporkolt.html"
+              class="recipe-card d-flex align-items-center text-decoration-none"
+            >
+              <img
+                src="./photos/gombaporkolt.jpg"
+                alt="Gombapörkölt"
+                class="recipe-thumb me-3"
+              />
+              <span class="recipe-name">Gombapörkölt</span>
+            </a>
+          </div>
+
+          <div class="col-12 col-md-6">
+            <a
+              href="./recipes/husleves.html"
+              class="recipe-card d-flex align-items-center text-decoration-none"
+            >
+              <img
+                src="./photos/husleves.jpg"
+                alt="Húsleves"
+                class="recipe-thumb me-3"
+              />
+              <span class="recipe-name">Húsleves</span>
+            </a>
+          </div>
+
+          <div class="col-12 col-md-6">
+            <a
+              href="./recipes/kokuszgolyo.html"
+              class="recipe-card d-flex align-items-center text-decoration-none"
+            >
+              <img
+                src="./photos/kokuszgolyo.jpg"
+                alt="Kókuszgolyó"
+                class="recipe-thumb me-3"
+              />
+              <span class="recipe-name">Kókuszgolyó</span>
+            </a>
+          </div>
+
+          <div class="col-12 col-md-6">
+            <a
+              href="./recipes/kokuszkocka.html"
+              class="recipe-card d-flex align-items-center text-decoration-none"
+            >
+              <img
+                src="./photos/kokuszkocka2.jpg"
+                alt="Kókuszkocka"
+                class="recipe-thumb me-3"
+              />
+              <span class="recipe-name">Kókuszkocka</span>
+            </a>
+          </div>
+
+          <div class="col-12 col-md-6">
+            <a
+              href="./recipes/langos.html"
+              class="recipe-card d-flex align-items-center text-decoration-none"
+            >
+              <img
+                src="./photos/langos.jpg"
+                alt="Lángos"
+                class="recipe-thumb me-3"
+              />
+              <span class="recipe-name">Lángos</span>
+            </a>
+          </div>
+
+          <div class="col-12 col-md-6">
+            <a
+              href="./recipes/lapcsanka.html"
+              class="recipe-card d-flex align-items-center text-decoration-none"
+            >
+              <img
+                src="./photos/lapcsanka2.jpg"
+                alt="Lapcsánka"
+                class="recipe-thumb me-3"
+              />
+              <span class="recipe-name">Lapcsánka</span>
+            </a>
+          </div>
+
+          <div class="col-12 col-md-6">
+            <a
+              href="./recipes/linzer.html"
+              class="recipe-card d-flex align-items-center text-decoration-none"
+            >
+              <img
+                src="./photos/linzer.jpg"
+                alt="Linzer"
+                class="recipe-thumb me-3"
+              />
+              <span class="recipe-name">Linzer</span>
+            </a>
+          </div>
+
+          <div class="col-12 col-md-6">
+            <a
+              href="./recipes/meggyes-pite.html"
+              class="recipe-card d-flex align-items-center text-decoration-none"
+            >
+              <img
+                src="./photos/meggyes-pite.jpg"
+                alt="Meggyes pite"
+                class="recipe-thumb me-3"
+              />
+              <span class="recipe-name">Meggyes pite</span>
+            </a>
+          </div>
+
+          <div class="col-12 col-md-6">
+            <a
+              href="./recipes/nice-cream.html"
+              class="recipe-card d-flex align-items-center text-decoration-none"
+            >
+              <img
+                src="./photos/nice-cream.jpg"
+                alt="Nice cream"
+                class="recipe-thumb me-3"
+              />
+              <span class="recipe-name">Nice cream</span>
+            </a>
+          </div>
+
+          <div class="col-12 col-md-6">
+            <a
+              href="./recipes/paprikas-krumpli.html"
+              class="recipe-card d-flex align-items-center text-decoration-none"
+            >
+              <img
+                src="./photos/paprikas-krumpli2.jpg"
+                alt="Paprikás krumpli"
+                class="recipe-thumb me-3"
+              />
+              <span class="recipe-name">Paprikás krumpli</span>
+            </a>
+          </div>
+
+          <div class="col-12 col-md-6">
+            <a
+              href="./recipes/rakott-krumpli.html"
+              class="recipe-card d-flex align-items-center text-decoration-none"
+            >
+              <img
+                src="./photos/rakott-krumpli2.jpg"
+                alt="Rakott krumpli"
+                class="recipe-thumb me-3"
+              />
+              <span class="recipe-name">Rakott krumpli</span>
+            </a>
+          </div>
+
+          <div class="col-12 col-md-6">
+            <a
+              href="./recipes/zoldborsokremleves.html"
+              class="recipe-card d-flex align-items-center text-decoration-none"
+            >
+              <img
+                src="./photos/zoldborsokremleves.jpg"
+                alt="Zöldborsókrémleves"
+                class="recipe-thumb me-3"
+              />
+              <span class="recipe-name">Zöldborsókrémleves</span>
+            </a>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <!-- Footer -->
-    <footer class="footer mt-5 py-3 bg-light fixed-bottom">
+    <footer class="footer mt-5 py-3 bg-light">
       <div class="container text-center">
         <span class="text-muted">© 2025 My Favourite Recipes</span>
       </div>
