--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="carousel-inner">
               <!-- Slide 1 -->
               <div class="carousel-item active">
-                <a href="/recipes/fahejas-csiga.html">
+                <a href="./recipes/fahejas-csiga.html">
                   <img
                     src="./photos/fahejas-csiga.jpg"
                     class="d-block w-100 rounded"
@@ -115,7 +115,7 @@
 
               <!-- Slide 2 -->
               <div class="carousel-item">
-                <a href="/recipes/gombaporkolt.html">
+                <a href="./recipes/gombaporkolt.html">
                   <img
                     src="./photos/gombaporkolt.jpg"
                     class="d-block w-100 rounded"
@@ -132,7 +132,7 @@
 
               <!-- Slide 3 -->
               <div class="carousel-item">
-                <a href="/recipes/francia-hagymaleves.html">
+                <a href="./recipes/francia-hagymaleves.html">
                   <img
                     src="./photos/hagymaleves3.jpg"
                     class="d-block w-100 rounded"
